--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-234.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇨🇳 中国-2.18MB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-7.35MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-352.5KB/s(Youtube:不良林), server: sg0601.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: sg0601.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.79MB/s(Youtube:不良林), server: hk-route2-azure-hk7.dukou.info, port: 8307, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route2-azure-hk7.dukou.info, skip-cert-verify: true}
-  - {name: 塞浦路斯-731.6KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇩🇪 德国-692.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林), server: 213.183.53.208, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇯🇵 日本-2.79MB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-1.13MB/s(Youtube:不良林), server: 213.183.51.172, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-5.82MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.15MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-653.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇭🇰 香港-3.17MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-322.9KB/s(Youtube:不良林), server: zh01lv5ge05.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-521.0KB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-234.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 塞浦路斯-731.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-692.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-653.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-234.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 塞浦路斯-731.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-692.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-653.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-234.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 塞浦路斯-731.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-692.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-653.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-234.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 塞浦路斯-731.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-692.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-653.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-234.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 塞浦路斯-731.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-692.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-653.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-234.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 塞浦路斯-731.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-692.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-653.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-234.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-352.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 塞浦路斯-731.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-692.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.15MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-653.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
