--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.43MB/s(Youtube:不良林), server: hk-route-12369-9.dukou.info, port: 8309, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-9.dukou.info, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: 185.167.116.252, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-3.95MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-521.0KB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇳🇱 荷兰-256.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇭🇰 香港-9.38MB/s(Youtube:不良林), server: 103.117.102.8, port: 12306, type: trojan, password: ac3a3c5a-04d6-467d-a4cd-a759b3b0c6c9, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林), server: 213.183.53.200, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林), server: 185.167.116.252, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇨🇳 中国-348.0KB/s(Youtube:不良林), server: 43.154.93.14, port: 443, type: vmess, uuid: afe936ee-536e-4e94-8c46-71d222183729, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /vNz3qzS3ml, ws-headers: {Host: 43.154.93.14}}
+  - {name: 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: 185.167.116.252, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇨🇭 瑞士-1.97MB/s(Youtube:不良林), server: ch1.nodegz.top, port: 444, type: trojan, password: eed5c3e1-2d36-4429-8795-2ed74d374f23, sni: ch1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-152.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-479.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-272.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-521.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-256.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
