--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林), server: 213.183.53.200, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林), server: 185.167.116.252, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇨🇳 中国-348.0KB/s(Youtube:不良林), server: 43.154.93.14, port: 443, type: vmess, uuid: afe936ee-536e-4e94-8c46-71d222183729, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /vNz3qzS3ml, ws-headers: {Host: 43.154.93.14}}
-  - {name: 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: 185.167.116.252, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇨🇭 瑞士-1.97MB/s(Youtube:不良林), server: ch1.nodegz.top, port: 444, type: trojan, password: eed5c3e1-2d36-4429-8795-2ed74d374f23, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-152.1KB/s(Youtube:不良林), server: 213.183.59.206, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-479.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-272.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇳 中国-200.3KB/s(Youtube:不良林), server: zh01lv5ge05.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇳🇱 荷兰-151.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇨🇳 中国-16.83MB/s(Youtube:不良林), server: hk-route-12369-9.dukou.info, port: 8309, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-9.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-482.4KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-438.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇳🇱 荷兰-233.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 乌克兰-1001.1KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
+      - 乌克兰-1001.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
+      - 乌克兰-1001.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
+      - 乌克兰-1001.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
+      - 乌克兰-1001.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
+      - 乌克兰-1001.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
+      - 乌克兰-1001.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-840.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-559.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-152.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-479.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-272.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-151.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-16.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-482.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-529.6KB/s(Youtube:不良林)
+      - 乌克兰-1001.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
